[gd_scene load_steps=4 format=2]

[ext_resource path="res://gfx/clouds/levelsMenuBacground.png" type="Texture" id=1]
[ext_resource path="res://Objects/Menu/LevelsMenu.gd" type="Script" id=2]
[ext_resource path="res://theme/Buttons_Font.tres" type="Theme" id=3]

[node name="LevelsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
texture = ExtResource( 1 )
region_rect = Rect2( -0.332764, 6.48447, 1032.18, 590.916 )

[node name="Texteres" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ShadowLvl1Button" type="ColorRect" parent="Texteres"]
margin_left = 50.0
margin_top = 48.0
margin_right = 154.0
margin_bottom = 143.0
color = Color( 0.431373, 1, 0.317647, 1 )

[node name="ColorLvl1Button" type="ColorRect" parent="Texteres"]
margin_left = 52.0
margin_top = 50.0
margin_right = 152.0
margin_bottom = 141.0
color = Color( 0.0117647, 0.0235294, 0.376471, 1 )

[node name="ShadowLvl2Button" type="ColorRect" parent="Texteres"]
margin_left = 160.0
margin_top = 48.0
margin_right = 264.0
margin_bottom = 143.0
color = Color( 0.431373, 1, 0.317647, 1 )

[node name="ColorLvl2Button" type="ColorRect" parent="Texteres"]
margin_left = 162.0
margin_top = 50.0
margin_right = 262.0
margin_bottom = 141.0
color = Color( 0.0117647, 0.0235294, 0.376471, 1 )

[node name="ShadowLvl3Button" type="ColorRect" parent="Texteres"]
margin_left = 268.0
margin_top = 48.0
margin_right = 372.0
margin_bottom = 143.0
color = Color( 0.431373, 1, 0.317647, 1 )

[node name="ColorLvl3Button" type="ColorRect" parent="Texteres"]
margin_left = 270.0
margin_top = 50.0
margin_right = 370.0
margin_bottom = 141.0
color = Color( 0.0117647, 0.0235294, 0.376471, 1 )

[node name="ShadowBackButton2" type="ColorRect" parent="Texteres"]
margin_left = 896.0
margin_top = 539.0
margin_right = 1016.0
margin_bottom = 577.0
color = Color( 0, 0, 0, 1 )

[node name="ColorBackButton2" type="ColorRect" parent="Texteres"]
margin_left = 898.0
margin_top = 541.0
margin_right = 1014.0
margin_bottom = 575.0
color = Color( 0.592157, 0.0392157, 0.0392157, 1 )

[node name="Buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -250.0
margin_right = 460.0
margin_bottom = 250.0
theme = ExtResource( 3 )

[node name="ButtonLvl1" type="Button" parent="Buttons"]
anchor_left = -0.0186916
anchor_right = -0.0186916
margin_left = 16.1963
margin_top = -2.0
margin_right = 118.196
margin_bottom = 93.0
rect_min_size = Vector2( 100, 0 )
text = "Level 1"
flat = true

[node name="ButtonLvl2" type="Button" parent="Buttons"]
margin_left = 109.0
margin_top = -2.0
margin_right = 211.0
margin_bottom = 93.0
rect_min_size = Vector2( 100, 0 )
disabled = true
text = "Level 2"
flat = true

[node name="ButtonLvl3" type="Button" parent="Buttons"]
anchor_left = 0.0124611
anchor_right = 0.0124611
margin_left = 205.536
margin_top = -2.0
margin_right = 308.536
margin_bottom = 93.0
rect_min_size = Vector2( 100, 0 )
disabled = true
text = "Level 3"
flat = true

[node name="Back" type="Button" parent="Buttons"]
margin_left = 857.0
margin_top = 491.0
margin_right = 949.0
margin_bottom = 526.0
text = "Back"
flat = true

[connection signal="pressed" from="Buttons/ButtonLvl1" to="." method="_on_ButtonLvl1_pressed"]
[connection signal="pressed" from="Buttons/ButtonLvl2" to="." method="_on_ButtonLvl2_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
